--- a/style.css
+++ b/style.css
@@ -90,13 +90,13 @@ main {
 
 /*** Main Nav Header ***/
 
-header#header {
+#header {
   height: calc(3vw + 3vh);
   background-color: var(--secondary-color);
   z-index: 2;
 }
 
-nav#header__main-nav {
+#header__main-nav {
   height: 100%;
 }
 
@@ -152,14 +152,107 @@ nav#header__main-nav {
   transform: scaleX(1);
 }
 
+/*** Hero Section ***/
+
+#hero {
+  height: 100vh;
+  background-image: url('img/full-bg-07.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.hero__content {
+  background-color: var(--secondary-color-m);
+  padding: calc(1rem + 2vw);
+  height: calc(5rem + 20vmax);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  animation: hero 2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+
+@keyframes hero {
+  0% {
+    transform: translateX(100rem) rotate(360deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.hero__content--title {
+  font-size: calc(2rem + 3vw);
+  color: white;
+}
+
+.hero__content--paragraph {
+  font-family: 'Indie Flower', cursive;
+  font-size: calc(1.5rem + 1vw);
+  color: white;
+}
+
+.hero__content--link:link,
+.hero__content--link:visited {
+  padding: 1rem 0;
+  transition: all 0.5s ease-in-out;
+  width: 9rem;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+  position: relative;
+
+  z-index: 1;
+}
+
+.hero__content--link:link::after,
+.hero__content--link:visited::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--primary-color);
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.45s cubic-bezier(0.645, 0.045, 0.355, 1);
+
+  z-index: -1;
+}
+
+.hero__content--link:hover::after,
+.hero__content--link:active::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+/*** (max-width: 900px) ***/
+
+@media screen and (max-width: 900px) {
+  #hero {
+    background-position: 100%;
+    align-items: flex-end;
+  }
+}
 /*** (max-width: 610px) ***/
 
 @media screen and (max-width: 610px) {
-  header#header {
+  #header {
     position: absolute;
   }
 
-  nav#header__main-nav {
+  #header__main-nav {
     width: 30rem;
     height: 100%;
     position: fixed;
@@ -250,5 +343,9 @@ nav#header__main-nav {
 
   .header__main-nav--links li.fade {
     opacity: 1;
+  }
+
+  #hero {
+    background-position: 80%;
   }
 }
