--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ a:visited {
 
 /*-*-*-*-*- Side Nav -*-*-*-*-*/
 
-aside#side-nav {
-  /* position: sticky; */
+#side-nav {
+  position: sticky;
   top: 0;
   left: 0;
   height: 100vh;
@@ -235,6 +235,36 @@ main {
 .hero__content--link:active::after {
   transform: scaleX(1);
   transform-origin: left;
+}
+
+/*** Work Section ***/
+#work {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 2rem;
+  background-color: var(--tertiary-color);
+}
+
+.work__card {
+  padding: 2rem;
+  flex-basis: 40rem;
+  flex-grow: 1;
+
+  clip-path: polygon(20% 0, 80% 0, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0 80%, 0 20%);
+}
+
+.work__card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  transition: filter 0.45s ease;
+}
+
+.work__card img:hover, 
+.work__card img:active {
+  filter: sepia(80%);
 }
 
 /*** (max-width: 900px) ***/
