--- a/style.css
+++ b/style.css
@@ -251,7 +251,16 @@ main {
   flex-basis: 40rem;
   flex-grow: 1;
 
-  clip-path: polygon(20% 0, 80% 0, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0 80%, 0 20%);
+  clip-path: polygon(
+    20% 0,
+    80% 0,
+    100% 20%,
+    100% 80%,
+    80% 100%,
+    20% 100%,
+    0 80%,
+    0 20%
+  );
 }
 
 .work__card img {
@@ -262,9 +271,165 @@ main {
   transition: filter 0.45s ease;
 }
 
-.work__card img:hover, 
+.work__card img:hover,
 .work__card img:active {
   filter: sepia(80%);
+}
+
+/*** About Me Section ***/
+
+#about-me {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+
+  padding: 2rem;
+  background-color: var(--secondary-color);
+}
+
+.about-me__img,
+.about-me__content {
+  flex-basis: 40rem;
+  padding: 2rem;
+  flex-grow: 1;
+}
+
+.about-me__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-me__content--title {
+  font-size: 4rem;
+  padding: 1rem 0;
+  color: white;
+  text-transform: uppercase;
+
+  position: relative;
+}
+
+.about-me__content--title::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 0.3rem;
+  width: 10%;
+  background-color: var(--primary-color);
+}
+
+.about-me__content--title,
+.about-me__content--paragraph {
+  margin-bottom: 4rem;
+  letter-spacing: 0.2rem;
+}
+
+.about-me__content--paragraph {
+  font-size: 1.8rem;
+  font-family: 'Indie Flower', cursive;
+}
+
+.about-me__content--link:link,
+.about-me__content--link:visited {
+  padding: 1rem 0;
+  font-size: 1.5rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+
+  position: relative;
+
+  z-index: 1;
+}
+
+.about-me__content--link:link::after,
+.about-me__content--link:visited::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: var(--primary-color);
+  transform: scaleY(0);
+  transform-origin: bottom;
+  transition: transform 0.45s cubic-bezier(0.645, 0.045, 0.355, 1);
+
+  z-index: -1;
+}
+
+.about-me__content--link:link:hover::after,
+.about-me__content--link:visited:active::after {
+  transform: scaleY(1);
+  transform-origin: top;
+}
+
+/*** Services Section ***/
+#services {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  padding: 6rem 2rem 2rem;
+  background-color: var(--primary-color);
+}
+
+.service {
+  padding: 4rem;
+  margin: 0 2rem 4rem;
+  flex-basis: 40rem;
+  flex-grow: 1;
+
+  background-color: var(--secondary-color);
+  border-bottom: 0.2rem solid var(--secondary-color);
+  border-right: 0.2rem solid var(--secondary-color);
+  border-left: 0.2rem solid var(--secondary-color);
+
+  position: relative;
+  z-index: 1;
+}
+
+.service::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--primary-color);
+  transform: scaleX(0);
+  transition: transform 0.45s cubic-bezier(1, 0, 0, 1);
+  z-index: -1;
+}
+
+.service:hover::after,
+.service:active::after {
+  transform: scaleX(1);
+}
+
+.service i,
+.service--title {
+  margin-bottom: 2rem;
+  font-size: 3rem;
+}
+
+.service i {
+  font-size: 3rem;
+  color: white;
+}
+
+.service--title {
+  text-transform: uppercase;
+}
+
+.service--paragraph {
+  font-family: 'Indie Flower', cursive;
+  font-size: 2rem;
+  color: white;
 }
 
 /*** (max-width: 900px) ***/
@@ -377,5 +542,22 @@ main {
 
   #hero {
     background-position: 80%;
+  }
+
+  #services {
+    padding: 6rem 3rem 2rem;
+  }
+
+  .service {
+    padding: calc(1rem + 2vw);
+    margin: 0 0 calc(1rem + 2vw);
+  }
+
+  .service--title {
+    font-size: calc(1.2rem + 2vw);
+  }
+
+  .service--paragraph {
+    font-size: calc(0.8rem + 1.5vw);
   }
 }
