--- a/style.css
+++ b/style.css
@@ -432,6 +432,273 @@ main {
   color: white;
 }
 
+/*** Skills Section ***/
+
+#skills {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  padding: calc(1rem + 2vw);
+  background-color: var(--tertiary-color);
+}
+
+.skills__design,
+.skills__coding {
+  padding: calc(1rem + 2vw);
+  flex-grow: 1;
+  flex-basis: 40rem;
+}
+.skills__design--title,
+.skills__coding--title {
+  text-transform: uppercase;
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.skills__design h4,
+.skills__coding h4 {
+  font-size: 2rem;
+  color: white;
+}
+
+.skills__design--progress,
+.skills__coding--progress {
+  position: relative;
+  padding: 0.5rem;
+  border-radius: 3rem;
+  background-color: var(--primary-color);
+  margin-bottom: 2rem;
+}
+
+.skills__design--progress span,
+.skills__coding--progress span {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  height: 2rem;
+  border-radius: 1rem 0 0 1rem;
+  background-color: var(--secondary-color);
+}
+
+.skills__design--progress__1 {
+  animation: design-1 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes design-1 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+.skills__design--progress__2 {
+  animation: design-2 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes design-2 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 75%;
+  }
+}
+.skills__design--progress__3 {
+  animation: design-3 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes design-3 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 95%;
+  }
+}
+.skills__design--progress__4 {
+  animation: design-4 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes design-4 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 65%;
+  }
+}
+
+.skills__coding--progress__1 {
+  animation: coding-1 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes coding-1 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 95%;
+  }
+}
+.skills__coding--progress__2 {
+  animation: coding-2 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes coding-2 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+.skills__coding--progress__3 {
+  animation: coding-3 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes coding-3 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 65%;
+  }
+}
+.skills__coding--progress__4 {
+  animation: coding-4 4s infinite cubic-bezier(1, 0, 0, 1);
+}
+
+@keyframes coding-4 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 90%;
+  }
+}
+
+/*** Testimonials Section ***/
+
+#testimonials {
+  padding: calc(1rem + 2vw);
+  background-color: var(--secondary-color);
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.testimonials__card {
+  padding: 2vw;
+  flex-basis: 50rem;
+  flex-grow: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.testimonials__card--img {
+  width: 100%;
+  height: 100%;
+}
+
+.testimonials__card--img img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.35s ease-in-out;
+}
+
+.testimonials__card--content__title {
+  font-size: 3rem;
+  text-transform: uppercase;
+}
+
+.testimonials__card--content__paragraph {
+  font-family: 'Indie Flower', cursive;
+  font-size: 1.5rem;
+}
+
+.testimonials__card--content {
+  position: absolute;
+  top: 60%;
+  left: 0;
+  width: 80%;
+  background-color: var(--tertiary-color-m);
+  padding: 1.5rem;
+
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.35s ease-in-out;
+}
+
+.testimonials__card:hover .testimonials__card--content,
+.testimonials__card:active .testimonials__card--content {
+  transform: scaleY(1);
+}
+
+.testimonials__card:hover .testimonials__card--img img,
+.testimonials__card:active .testimonials__card--img img {
+  transform: scale(0.98);
+  filter: grayscale(50%);
+}
+
+/*** Contact Section ***/
+
+#contact {
+  height: 100vh;
+  background-image: url('img/full-bg-03.jpg');
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.contact__form {
+  flex-basis: 40rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact__form input,
+.contact__form textarea {
+  background-color: var(--tertiary-color-m);
+  color: white;
+  /* background: transparent; */
+  font-family: 'Indie Flower', cursive;
+  font-size: 1.5;
+  letter-spacing: 0.2rem;
+  padding: 2rem;
+  border: none;
+  border-bottom: var(--secondary-color) solid 0.1rem;
+}
+
+.contact__form input::placeholder,
+.contact__form textarea::placeholder {
+  color: white;
+}
+
+.contact__form textarea {
+  height: 30vh;
+}
+
+input[type="submit"] {
+  border: none;
+  cursor: pointer;
+}
+
+
+
+/*** (min-width: 1510px) ***/
+
+@media screen and (min-width: 1510px) {
+  body {
+    width: 1510px;
+    margin: 0 auto;
+  }
+}
 /*** (max-width: 900px) ***/
 
 @media screen and (max-width: 900px) {
@@ -553,11 +820,41 @@ main {
     margin: 0 0 calc(1rem + 2vw);
   }
 
-  .service--title {
+  .service--title,
+  .skills__design--title,
+  .skills__coding--title,
+  .testimonials__card--content__title {
     font-size: calc(1.2rem + 2vw);
   }
 
-  .service--paragraph {
+  .service--paragraph,
+  .skills__design h4,
+  .skills__coding h4,
+  .testimonials__card--content__paragraph {
     font-size: calc(0.8rem + 1.5vw);
+  }
+}
+
+/*** (max-width: 460px) ***/
+
+@media screen and (max-width: 460px) {
+  .testimonials__card--content {
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transform: scaleY(0);
+    transform-origin: bottom;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .testimonials__card:hover .testimonials__card--content,
+  .testimonials__card:active .testimonials__card--content {
+    transform-origin: bottom;
+  }
+
+  #contact {
+    background-position: 15% 5%;
   }
 }
